--- a/subpages/about.html
+++ b/subpages/about.html
@@ -15,7 +15,7 @@
 </head>
 <body>
      <!-- Navigation Bar-->
-    <nav class="navbar navbar-expand-lg my-3 py-4" style="box-shadow: 0 0 10px 0 gray;background-color: #28a745!important;">
+    <nav class="navbar navbar-expand-lg my-3 py-3" style="box-shadow: 0 0 10px 0 gray;background-color: #28a745!important;">
         <div class="container">
             <button class="btn border-light navbar-toggler ms-auto" data-bs-toggle="collapse" data-bs-target="#nav-e">
                 <i class="fa-solid fa-bars text-white"></i>
@@ -48,7 +48,7 @@
                     <p>It used to be known as the "richest municipality in the Philippines"[7] because of the large populace of migrants working in the town's industrial estates.[12] Nestlé Philippines, Asia Brewery, Inc., San Miguel Corporation, Tanduay Distillers, Inc., Wyeth Philippines, Inc., Procter & Gamble Philippines, Light Industry and Science Park of the Philippines and Mapúa Malayan Colleges Laguna have established factories or are located in Cabuyao.</p>
                     <p>By virtue of Republic Act No. 10163,[13] the municipality of Cabuyao was converted to a component city,[14] after the ratification of a plebiscite held on August 4, 2012.[15][16]</p>
                 </div>
-                <div class="col-md-6 order-1 order-md-2 pt-5">
+                <div class="col-md-6 order-1 order-md-2 pt-5 text-center">
                     <img src="../images/Map_of_Cabuyao.jpg" class="img-fluid" />
                 </div>
                 <div class="col-6 order-3"></div>
