ADDY ADD ADD SOME THING

--- a/subpages/about.html
+++ b/subpages/about.html
@@ -38,26 +38,52 @@
     <!-- Navigation Bar End -->
 
         <!-- Header -->
-        <div class="container-fluid">
-            <div class="row">
-                <div id="hab" class="col-12 text-center text-light"  style="height:40vh !important;">
-                    <h1 class="mt-5">Cabuyao City</h1>
-                </div>
+        <div id="hab" class="text-center text-light d-flex justify-content-center align-items-center"  style="height:40vh !important;">
+            <br/>
+            <h1 class="mt-5">Cabuyao City</h1>
+        </div>
+        <!-- Header End-->
+
+        <!-- Main-->
+        <div class="container-fluid my-3 fs-4" style="box-shadow: 0 0 10px 0 gray;">
+            <h1 style="font-size: 4.5rem;" class="mt-5 text-center">About</h1>
+            <div class="text-center my-5">
+                <img class="abt-logo" src="../images/logo_seal.png" alt="" width="500rem">
+                <h2 class="my-4">Cabuyao Seal</h2>
+            </div>
+            <div class="row p-5 my-5">
                 <div class="col-md-6 pt-5 order-2">
-                    <p class="mt-5">Cabuyao, officially the City of Cabuyao (Filipino: Lungsod ng Cabuyao), is a 1st class component city in the province of Laguna, Philippines. According to the 2020 census, it has a population of 355,330 people.[10]</p>
-                    <p>It used to be known as the "richest municipality in the Philippines"[7] because of the large populace of migrants working in the town's industrial estates.[12] Nestlé Philippines, Asia Brewery, Inc., San Miguel Corporation, Tanduay Distillers, Inc., Wyeth Philippines, Inc., Procter & Gamble Philippines, Light Industry and Science Park of the Philippines and Mapúa Malayan Colleges Laguna have established factories or are located in Cabuyao.</p>
-                    <p>By virtue of Republic Act No. 10163,[13] the municipality of Cabuyao was converted to a component city,[14] after the ratification of a plebiscite held on August 4, 2012.[15][16]</p>
+                    <h1>Nicknames:</h1> 
+                    "The City of Modern Factories"<br/>
+                    "The Enterprise City of the Philippines" <br/>
+                    "Next Wave City" <br/>
+                    "The Home of the Legendary Kampanang Ginto" <br/>
+                    "Golden Bell City" <br/>
+                    Formerly: "The Richest Municipality of the Philippines"<br/>
+                    Motto(s): One Cabuyao, One Vision <br/>
+                    (Isang Kabuyaw, Isang Pananaw) Bagong Cabuyao <br/>
+                    (New Kabuyaw) <br/>
+                    Anthem: Cabuyao Hymn
+
                 </div>
                 <div class="col-md-6 order-1 order-md-2 pt-5 text-center">
                     <img src="../images/Map_of_Cabuyao.jpg" class="img-fluid" />
                 </div>
-                <div class="col-6 order-3"></div>
-                <div class="col-md-6 order-4">
+            </div>
+            <div class="row">
+                <div class="col-md-6 order-3">
+                    <div class="p-5">
+                        <p class="mt-5">Cabuyao, officially the City of Cabuyao (Filipino: Lungsod ng Cabuyao), is a 1st class component city in the province of Laguna, Philippines. According to the 2020 census, it has a population of 355,330 people.</p>
+                        p>It used to be known as the "richest municipality in the Philippines" because of the large populace of migrants working in the town's industrial estates.Nestlé Philippines, Asia Brewery, Inc., San Miguel Corporation, Tanduay Distillers, Inc., Wyeth Philippines, Inc., Procter & Gamble Philippines, Light Industry and Science Park of the Philippines and Mapúa Malayan Colleges Laguna have established factories or are located in Cabuyao.</p>
+                        <p>By virtue of Republic Act No. 10163, the municipality of Cabuyao was converted to a component city, after the ratification of a plebiscite held on August 4, 2012.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 order-4 d-flex justify-content-center align-items-center">
                     <br />
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d123744.382801017!2d121.04429222391602!3d14.252524584730985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397d8847ffc5237%3A0xeefaf6451f579b65!2sCabuyao%2C%20Laguna!5e0!3m2!1sen!2sph!4v1690101942077!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
-        <!-- End Of Header-->
+        <!-- End Of Main-->
 </body>
 </html>
