--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                         <li class="nav-item p-2">
                             <a href="./subpages/about.html" class="btn nav-link" style="font-weight: 700;">About</a>
                         </li>
+                        <!-- <li class="nav-item p-2">
+                            <a href="#" class="btn nav-link" style="font-weight: 700;">Contact Us</a>
+                        </li> -->
                     </ul>
                 </div>
         </div>
@@ -60,7 +63,7 @@
     <!-- Image Gallery End -->
 
     <!-- What to See-->
-    <div id="wtsee" class="container-fluid pt-2">
+    <div id="wtsee" class="container-fluid pt-2 mb-5">
         <h1>What to See</h1>
         <h2 class="text-center" id="church">Churches</h2>
         <div class="row" style="margin-bottom: 15rem;">
@@ -186,7 +189,7 @@
                 <p>A festivity commemorating the legendary Kampanang Ginto which Cabuyao is known. The celebration always starts with the simultaneous ringing of church bells, which Cabuyeños believe that it brings good agricultural harvest. Since the City of Cabuyao was founded by Miguel López de Legazpi on January 16, 1571, the City Government of Cabuyao celebrates "Cabuyao Day" every 16th day of January.</p>
             </div>
         </div>
-        <div class="row" style="margin-bottom: 15rem;">
+        <div class="row">
             <div class="col-lg-6 d-flex justify-content-center flex-column order-lg-1 order-2" style="padding: 5rem !important;">
                 <h4>Santo Niño de Cabuyao Festival</h4>
                 <p>The City of Cabuyao and its people celebrate the feast of the Child Jesus or Santo Niño in the Philippines every third (3rd) Sunday of January. It starts from a Mass at the Cabuyao Church followed by a festival in which all Cabuyeños call it as "Santo Niño de Cabuyao Festival". It is a parade of all Santos Niños along the City Proper. The festivities and tradition was started in 1981 by Alimagno family (then Judge Constancio Sr. and wife Mely) as a gesture of thanksgiving as their son Kennedy survived a near fatal accident in last quarter of 1979.</p>
@@ -200,36 +203,90 @@
 
     <!-- Navigation Helper -->
     <div id="navilper" class="dropup">
-        <button type="button" class="btn dropdown-toggle p-2 text-white" style="background-color: #28a745!important;" data-bs-toggle="dropdown" data-toggle="dropdown" >
-           Go To
+        <button type="button" class="btn dropdown-toggle py-2 px-3 text-white" style="background-color: #28a745!important;font-size: 1.7rem !important;" data-bs-toggle="dropdown" data-toggle="dropdown" >
+           Goto
         </button>
         <ul class="dropdown-menu">
             <li>
-                <a href="#" class="btn dropdown-item">UP</a>
+                <a href="#" class="btn dropdown-item"><span class="wtsee-at">Header</span></a>
             </li>
             <li>
-                <a href="#church" class="btn dropdown-item">Churches</a>
+                <a href="#church" class="btn dropdown-item"><span>Churches</span></a>
             </li>
             <li>
-                <a href="#school" class="btn dropdown-item">Famous Schools</a>
+                <a href="#school" class="btn dropdown-item"><span>Famous Schools</span></a>
             </li>
             <li>
-                <a href="#city-hall" class="btn dropdown-item">City Hall</a>
+                <a href="#city-hall" class="btn dropdown-item"><span>City Hall</span></a>
             </li>
             <li>
-                <a href="#structure" class="btn dropdown-item">Structures</a>
+                <a href="#structure" class="btn dropdown-item"><span>Structures</span></a>
             </li>
             <li>
-                <a href="#sta-elena" class="btn dropdown-item">Sta Elena</a>
+                <a href="#sta-elena" class="btn dropdown-item"><span>Sta Elena</span></a>
             </li>
             <li>
-                <a href="#nature" class="btn dropdown-item">Nature</a>
+                <a href="#nature" class="btn dropdown-item"><span>Nature</span></a>
             </li>
             <li>
-                <a href="#festival" class="btn dropdown-item">Festivals</a>
+                <a href="#festival" class="btn dropdown-item"><span>Festivals</span></a>
             </li>
         </ul>
     </div>
     <!-- Navigation Helper End-->
+
+    <script type="text/javascript">
+        window.addEventListener("scroll",function() {
+            
+            // Navilper Toggle 
+            const navilper = document.getElementById("navilper");
+            if (window.scrollY > 100) navilper.style.display = "block";
+            else navilper.style.display = "none";
+
+            // Page Current Position 
+            // from bottom part to top
+            let parts = [];
+            addPart("festival");
+            addPart("nature");
+            addPart("sta-elena");
+            addPart("structure");
+            addPart("city-hall");
+            addPart("school");
+            addPart("church");
+
+            //push [id name,element offset y];
+            function addPart(id) {
+                let elem = document.getElementById(id);
+
+                function getTop(elem) {
+                    return elem.offsetTop;
+                 }
+
+                parts.push([id,getTop(elem)]);
+            }
+
+            //the current target
+            let at = document.getElementsByClassName("wtsee-at");
+            at = at[0];
+            let target;
+
+            for (let part of parts) {
+                let [id,posY] = part;
+                let diff = 600;
+                if (window.scrollY >= posY - diff) {
+                    target = id;
+                    break;
+                } 
+            }
+
+            if (target) {
+                at.classList.remove("wtsee-at");
+                let target_a = document.querySelector(`a[href="#${target}"]`);
+                target_a.querySelector("span").classList.add("wtsee-at");
+            }
+        });
+
+
+    </script>
 </body>
 </html>
