--- a/subpages/where-stay.html
+++ b/subpages/where-stay.html
@@ -38,7 +38,7 @@
     <!-- Navigation Bar End -->
     
     <!-- Main -->
-    <div id="wts-main" class="container-fluid">
+    <div id="wts-main" class="container-fluid fs-5">
         <h1>Where to Stay</h1>
 
         <!-- Hotels -->
