--- a/subpages/where-stay.html
+++ b/subpages/where-stay.html
@@ -45,7 +45,7 @@
         <h1 class="wts-t">Hotels</h1>
         <div class="d-flex flex-column collections">
             <div class="row" style="box-shadow: 0 0 10px 0 gray;">
-                <div class="col-md-4 ">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
                     <img class="img-fluid" src="../images/rizmy.jpg" style="width:400px;height:300px !important"/>
                 </div>
                 <div class="col-md-8 p-5">
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="row" style="box-shadow: 0 0 10px 0 gray;">
-                <div class="col-md-4">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
                     <img class="img-fluid" src="../images/yes.jpg" style="height:300px !important" />
                 </div>
                 <div class="col-md-8 p-5">
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="row" style="box-shadow: 0 0 10px 0 gray;">
-                <div class="col-md-4">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
                     <img class="img-fluid" src="../images/asia-novo.jpg" style="height:300px !important" />
                 </div>
                 <div class="col-md-8 p-5">
@@ -82,7 +82,7 @@
         <h1 class="wts-t">Resorts</h1>
         <div class="d-flex flex-column collections">
             <div class="row" style="box-shadow: 0 0 10px 0 gray;">
-                <div class="col-md-4 ">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
                     <img class="img-fluid" src="../images/woodside-farm-waterpark.jpg" style="width:400px;height:300px !important"/>
                 </div>
                 <div class="col-md-8 p-5">
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="row" style="box-shadow: 0 0 10px 0 gray;">
-                <div class="col-md-4">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
                     <img class="img-fluid" src="../images/kasile-hills.jpg" style="width:400px;height:300px !important" />
                 </div>
                 <div class="col-md-8 p-5">
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="row" style="box-shadow: 0 0 10px 0 gray;">
-                <div class="col-md-4">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
                     <img class="img-fluid" src="../images/queen-aurora-s-garden.jpg" style="width:400px;height:300px !important" />
                 </div>
                 <div class="col-md-8 p-5">
