--- a/subpages/where-stay.html
+++ b/subpages/where-stay.html
@@ -51,7 +51,7 @@
                 <div class="col-md-8 p-5">
                     <h3>Rizmy Hotel</h3>
                     <p>Ideal for fun and relaxation, Rizmy Apartment Hotel is located in the Cabuyao area of Laguna. Only 60 minutes away from Manila, the property's strategic location ensures that guests can quickly and easily reach many local points of interest. With its convenient location, the property offers easy access to the city's must-see destinations.</p>
-                    <a class="btn rounded" href="https://www.tripadvisor.com.ph/Hotels-g1798626-Cabuyao_Laguna_Province_Calabarzon_Region_Luzon-Hotels.html">Learn More</a>
+                    <a class="btn rounded" href="https://www.tripadvisor.com.ph/Hotels-g1798626-Cabuyao_Laguna_Province_Calabarzon_Region_Luzon-Hotels.html" target="_blank">Learn More</a>
                 </div>
             </div>
             <div class="row" style="box-shadow: 0 0 10px 0 gray;">
@@ -61,7 +61,7 @@
                 <div class="col-md-8 p-5">
                     <h3>Yes Hotel</h3>
                     <p>Set in Banlik, 26 km from People's Park in the Sky, Yes Hotel Cabuyao Laguna offers air-conditioned accommodation and a restaurant. This 3-star hotel offers room service and a 24-hour front desk. The property is non-smoking and is located 29 km from Picnic Grove. At the hotel, each room has a desk and a flat-screen TV. At Yes Hotel Cabuyao Laguna all rooms are fitted with bed linen and towels.</p>
-                    <a class="btn rounded" href="https://www.tripadvisor.com.ph/Hotels-g1798626-Cabuyao_Laguna_Province_Calabarzon_Region_Luzon-Hotels.html">Learn More</a>
+                    <a class="btn rounded" href="https://www.tripadvisor.com.ph/Hotels-g1798626-Cabuyao_Laguna_Province_Calabarzon_Region_Luzon-Hotels.html" target="_blank">Learn More</a>
                 </div>
             </div>
             <div class="row" style="box-shadow: 0 0 10px 0 gray;">
@@ -71,7 +71,7 @@
                 <div class="col-md-8 p-5">
                     <h3>Asia Novo Boutique Hotel</h3>
                     <p>The car parking and the Wi-Fi are always free, so you can stay in touch and come and go as you please. Strategically situated in Cabuyao, allowing you access and proximity to local attractions and sights. Don't leave before paying a visit to the famous Rose and Grace Restaurant.</p>
-                    <a class="btn rounded" href="https://www.tripadvisor.com.ph/Hotels-g1798626-Cabuyao_Laguna_Province_Calabarzon_Region_Luzon-Hotels.html">Learn More</a>
+                    <a class="btn rounded" href="https://www.tripadvisor.com.ph/Hotels-g1798626-Cabuyao_Laguna_Province_Calabarzon_Region_Luzon-Hotels.html" target="_blank">Learn More</a>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                 <div class="col-md-8 p-5">
                     <h3>Woodside Farm Waterpark</h3>
                     <p>Woodside Farm and Waterpark is a perfect fit for your travel. Offering spacious rooms, classy interiors and best- hospitality, it is one of the finest resorts in town. This beautiful place offers a variety of attractions and adventures. When it comes to accommodation, it’s always the Woodside Farm and Waterpark. We offer a wide range of rooms to accommodate your next family and friends outing. Redefining luxury, our ambience along with our friendly staff assure you a relaxed and cozy stay in the heart of the Phillipines.</p>
-                    <a class="btn rounded" href="https://www.tripadvisor.com.ph/Hotels-g1798626-Cabuyao_Laguna_Province_Calabarzon_Region_Luzon-Hotels.html">Learn More</a>
+                    <a class="btn rounded" href="https://www.tripadvisor.com.ph/Hotels-g1798626-Cabuyao_Laguna_Province_Calabarzon_Region_Luzon-Hotels.html" target="_blank">Learn More</a>
                 </div>
             </div>
             <div class="row" style="box-shadow: 0 0 10px 0 gray;">
@@ -98,7 +98,7 @@
                 <div class="col-md-8 p-5">
                     <h3>Kasile Hills</h3>
                     <p>Kasile Hills is a modern nature resort and events venue that holds stunning lush green views of the legendary Mt. Makiling and Laguna Lake. It offers a relaxing and serene sanctuary for those who want to escape the hustle and bustle of the city.</p>
-                    <a class="btn rounded" href="https://www.tripadvisor.com.ph/Hotels-g1798626-Cabuyao_Laguna_Province_Calabarzon_Region_Luzon-Hotels.html">Learn More</a>
+                    <a class="btn rounded" href="https://www.tripadvisor.com.ph/Hotels-g1798626-Cabuyao_Laguna_Province_Calabarzon_Region_Luzon-Hotels.html" target="_blank">Learn More</a>
                 </div>
             </div>
             <div class="row" style="box-shadow: 0 0 10px 0 gray;">
@@ -108,7 +108,7 @@
                 <div class="col-md-8 p-5">
                     <h3>Queen Aurora's Garden Resort</h3>
                     <p>Ideal for fun and relaxation, Rizmy Apartment Hotel is located in the Cabuyao area of Laguna. Only 60 minutes away from Manila, the property's strategic location ensures that guests can quickly and easily reach many local points of interest. With its convenient location, the property offers easy access to the city's must-see destinations.</p>
-                    <a class="btn rounded" href="https://www.tripadvisor.com.ph/Hotels-g1798626-Cabuyao_Laguna_Province_Calabarzon_Region_Luzon-Hotels.html">Learn More</a>
+                    <a class="btn rounded" href="https://www.tripadvisor.com.ph/Hotels-g1798626-Cabuyao_Laguna_Province_Calabarzon_Region_Luzon-Hotels.html" target="_blank">Learn More</a>
                 </div>
             </div>
         </div>
